--- a/哲语.md
+++ b/哲语.md
@@ -1,3 +1,5 @@
 # 哲学语言
-* 浅水是喧哗的，深水是沉默的。--雪莱
-* 佛在灵山莫远求，灵山自在汝心头，人人有座灵山塔，心向灵山塔下修。--印能法师
+* 浅水是喧哗的，深水是沉默的。
+  >>###### ——雪莱
+* 佛在灵山莫远求，灵山自在汝心头，人人有座灵山塔，心向灵山塔下修。
+  >>###### ——印能法师
