--- a/文学/哲语.md
+++ b/文学/哲语.md
@@ -5,3 +5,5 @@
   >>###### ——印能法师
 * 好言一句三冬暖，恶语伤人六月寒
   >>###### ——《增广贤文》
+* 好仁不好学，其蔽也愚；好知不好学，其蔽也荡；好信不好学，其蔽也贼；好直不好学，其蔽也绞；好勇不好学，其蔽也乱；好刚不好学，其蔽也狂。
+  >>###### ——《论语》
