--- a/文学/哲语.md
+++ b/文学/哲语.md
@@ -7,3 +7,7 @@
   >>###### ——《增广贤文》
 * 好仁不好学，其蔽也愚；好知不好学，其蔽也荡；好信不好学，其蔽也贼；好直不好学，其蔽也绞；好勇不好学，其蔽也乱；好刚不好学，其蔽也狂。
   >>###### ——《论语》
+* 休将自己心田昧，莫把他人过失扬
+  >>###### —— 憨山大师《醒世歌》
+* 谋事不求易成，事易成则志存轻慢。交情不求益吾，交易吾则亏损道义。于人不求顺适，人顺适则心必自矜。
+  >>###### —— 仁山法师
